--- a/index.html
+++ b/index.html
@@ -1189,7 +1189,7 @@
                 if (window.scrollY >= sectionTop && window.scrollY < sectionTop + sectionHeight) {
                     navLinks.forEach(link => {
                         link.classList.remove('active');
-                        if (link.getAttribute('href') === #${sectionId}) {
+                        if (link.getAttribute('href') === `#${sectionId}`) {
                             link.classList.add('active');
                         }
                     });
