--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
             <div class="timeline-item">
                 <div class="timeline-content">
                     <h3>HSC (Higher Secondary Certificate)</h3>
-                    <h4>Vidhyz Matric Higher Secondary School</h4>
+                    <h4>Vidhya Matric Higher Secondary School</h4>
                     <p>June 2021 — May 2022</p>
                     <p>Percentage: 78%</p>
                 </div>
@@ -914,7 +914,7 @@
             <div class="timeline-item">
                 <div class="timeline-content">
                     <h3>SSLC (Secondary School Leaving Certificate)</h3>
-                    <h4>Vidhyz Matric Higher Secondary School</h4>
+                    <h4>Vidhya Matric Higher Secondary School</h4>
                     <p>June 2019 — May 2020</p>
                     <p>Percentage: 98%</p>
                 </div>
